--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
+  font_awesome_flutter: ^8.11.0
+  firebase_core:
+  firebase_storage:
+  flutter_svg:
+  cloud_firestore: ^0.16.0
+  provider: ^4.3.3
+  hawk_fab_menu: ^0.3.2
+  permission_handler: ^5.0.1+1
+  image_picker : ^0.6.7+14
+  multi_image_picker: ^4.7.14
+
 
 dev_dependencies:
   flutter_test:
@@ -45,9 +56,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
